ajax implemented on delete categories

--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -341,6 +341,12 @@
 		
 
 	<!-- Slider -->
+	{% block content %}
+	
+	
+	
+	
+	
 	<section class="section-slide">
 		<div class="wrap-slick1">
 			<div class="slick1">
@@ -1276,7 +1282,7 @@
 			</div>
 		</div>
 	</section>
-
+	{% endblock content %}
 
 	<!-- Footer -->
 	<footer class="bg3 p-t-75 p-b-32">
