--- a/storeadmin/templates/storeadmin/categories/categories.html
+++ b/storeadmin/templates/storeadmin/categories/categories.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
+{% block metacontent %}
+{% comment %} <meta name="csrf-token" content="{{ csrf_token }}"> {% endcomment %}
 
+{% endblock metacontent %}
 <div class="container">
   <div class="row justify-content-end">
     <a href="{% url 'admin_addcategories' %}">
@@ -19,6 +22,12 @@
         </tr>
       </thead>
       <tbody>
+
+
+        {% comment %} var csrfToken =  $('input[name=csrfmiddlewaretoken]').val(); {% endcomment %}
+
+
+
         {% for item in datas %}
         <tr>
           <td class="py-1">{{ item.name }}</td>
@@ -28,11 +37,14 @@
             </a>
           </td>
           <td class="py-1">
-            <form action="POST"> {% csrf_token %}
-              <button type="submit" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button>
+          
+              
+            <button  type="button" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button>
 
-            </form>
             
+
+             {% comment %} <button  class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button> {% endcomment %}
+             
             {% comment %} <a href="{% url 'admin_deletecategories' item.id %}">
               <button class="btn delete-btn btn-danger">Delete</button>
             </a> {% endcomment %}
@@ -51,7 +63,88 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
+
   $(".delete-btn").click(function() {
+    var categoryId = $(this).data("category-id");
+    if (confirm("Are you sure you want to delete this category?")) {
+        
+        $.ajax({
+            url: "/storeadmin/deletecategories/" + categoryId + "/",
+            type: "DELETE",
+            beforeSend: function(xhr) {
+              xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+            },
+            success: function(response) {
+                alert(response.message);
+                location.reload();
+            },
+            error: function(xhr, status, error) {
+                alert("Error: " + error);
+            }
+        });
+    }
+});  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  {% comment %} $(".delete-btn").click(function() {
+    var categoryId = $(this).data("category-id");
+    if (confirm("Are you sure you want to delete this category?")) {
+        
+        $.ajax({
+            url: "/storeadmin/deletecategories/" + categoryId + "/",
+            type: "GET",
+            success: function(response) {
+                alert(response.message);
+                location.reload();
+            },
+            error: function(xhr, status, error) {
+                alert("Error: " + error);
+            }
+        });
+    }
+});  {% endcomment %}
+
+
+
+{% comment %} $(".delete-btn").click(function() {
+  var categoryId = $(this).data("category-id");
+  if (confirm("Are you sure you want to delete this category?")) {
+      var csrfToken = $("meta[name='csrf-token']").attr("content");
+      $.ajax({
+          url: "deletecategories/" + categoryId + "/",
+          type: "POST",
+          data: { csrfmiddlewaretoken: csrfToken },
+          success: function(response) {
+              alert(response.message);
+              location.reload();
+          },
+          error: function(xhr, status, error) {
+              alert("Error: " + error);
+          }
+      });
+  }
+});   {% endcomment %}
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+  {% comment %} $(".delete-btn").click(function() {
     var categoryId = $(this).data("category-id");
     if (confirm("Are you sure you want to delete this category?")) {
         $.ajax({
@@ -67,7 +160,7 @@
             }
         });
     }
-});
+}); {% endcomment %}
 
 
 </script>
