--- a/storeadmin/templates/storeadmin/index.html
+++ b/storeadmin/templates/storeadmin/index.html
@@ -6,6 +6,9 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  {% block metacontent %}
+
+  {% endblock metacontent %}
   <title>Sk8 FACTORY Admin</title>
   <!-- plugins:css -->
   <link rel="stylesheet" href="{% static 'storeadmin/vendors/feather/feather.css' %}">
