--- a/storeadmin/templates/storeadmin/products/editproducts.html
+++ b/storeadmin/templates/storeadmin/products/editproducts.html
@@ -23,9 +23,9 @@
     </div>
     <div class="form-group mt-2">
       <label for="inputImage">Image</label>
-      <input name="image" type="file" class="form-control-file" id="inputImage">
+      <input name="images" type="file" class="form-control-file" id="inputImage">
       
-      <img src="{{ content.image.url }}" alt="{{ content.title }}">
+      <img name="image" src="{{ content.image1.url }}" alt="{{ content.title }}">
       
     </div>
     <div class="form-group mt-2">
