--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
 <!--===============================================================================================-->
+	{% block head %}	{% endblock head %}	
 </head>
 <body class="animsition">
 	
