--- a/store/templates/store/userdashboard/loggedinproduct.html
+++ b/store/templates/store/userdashboard/loggedinproduct.html
@@ -11,6 +11,8 @@
 	<title>Product</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!--===============================================================================================-->	
 	<link rel="icon" type="image/png" href="{% static 'store/images/icons/favicon.png' %}"/>
 <!--===============================================================================================-->
@@ -40,6 +42,8 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
+
+	
 
 	
 </head>
@@ -578,7 +582,7 @@
 						<div class="block2-pic hov-img0">
 							
 							
-  								<img src="{{ item.image1.url }}" alt="{{ item.name }} image">
+  								<img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
 							
 
 							<a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
@@ -1614,6 +1618,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		</div>
 	</div> {% endcomment %}
 
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/2.2.3/jquery.elevatezoom.min.js" integrity="sha512-UH428GPLVbCa8xDVooDWXytY8WASfzVv3kxCvTAFkxD2vPjouf1I3+RJ2QcSckESsb7sI+gv3yhsgw9ZhM7sDw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <!--===============================================================================================-->	
 	<script src="{% static 'store/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
 <!--===============================================================================================-->
@@ -1773,6 +1781,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			  });
 			
 		  </script>
+
+		  <script>
+			$(".elevatezoom").elevateZoom();
+		  </script>
+
 
 	</script> 
 
