--- a/store/templates/store/userdashboard/preview.html
+++ b/store/templates/store/userdashboard/preview.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="bg0 p-t-60 p-b-30 p-lr-15-lg how-pos3-parent">
                 <button class="how-pos3 hov3 trans-04 js-hide-modal1">
-                    <img src="images/icons/icon-close.png" alt="CLOSE">
+                    <img src="{% static 'store/images/icons/icon-close.png' %}" alt="CLOSE">
                 </button>
 
                 <div class="row">
@@ -34,9 +34,9 @@
                                 <div class="slick3 gallery-lb">
                                     <div class="item-slick3" data-thumb="images/product-detail-01.jpg">
                                         <div class="wrap-pic-w pos-relative">
-                                            <img src="{{pdtobj.image1.url}}" alt="IMG-PRODUCT" data-zoom-image="{{pdtobj.image1.url}}" id="zoom">
+                                            <img src="{{pdtobj.image1.url}}" alt="IMG-PRODUCT" data-zoom-image="{{pdtobj.image1.url}}" id="zoom1">
 
-                                            <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-01.jpg">
+                                            <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="{% static 'store/images/product-detail-01.jpg' %}">
                                                 <i class="fa fa-expand"></i>
                                             </a>
                                         </div>
@@ -44,7 +44,7 @@
 
                                     <div class="item-slick3" data-thumb="images/product-detail-02.jpg">
                                         <div class="wrap-pic-w pos-relative">
-                                            <img src="{{pdtobj.image1.url}}" alt="IMG-PRODUCT" data-zoom-image="{{pdtobj.image1.url}}" id="zoom">
+                                            <img src="{{pdtobj.image2.url}}" alt="IMG-PRODUCT" data-zoom-image="{{pdtobj.image2.url}}" id="zoom2">
 
                                             <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-02.jpg">
                                                 <i class="fa fa-expand"></i>
@@ -54,7 +54,7 @@
 
                                     <div class="item-slick3" data-thumb="images/product-detail-03.jpg">
                                         <div class="wrap-pic-w pos-relative">
-                                            <img src="{% static 'store/images/sb2slide1.png' %}" alt="IMG-PRODUCT">
+                                            <img src="{{pdtobj.image3.url}}" alt="IMG-PRODUCT" data-zoom-image="{{pdtobj.image3.url}}" id="zoom3">
 
                                             <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-03.jpg">
                                                 <i class="fa fa-expand"></i>
@@ -194,9 +194,8 @@
 
 
 <script>
-    $("#zoom").elevateZoom()
+    $("#zoom1, #zoom2, #zoom3").elevateZoom();
 </script>
-
 
 
                             
