--- a/store/templates/store/userdashboard/previousorders.html
+++ b/store/templates/store/userdashboard/previousorders.html
@@ -81,7 +81,7 @@
     if (confirm("Are you sure you want to cancel this order?")) {
         
         $.ajax({
-            url: "../cancelorder/" + someid  + "/",
+            url: "../cancelorder/" + someid ,
             type: "GET",
             beforeSend: function(xhr) {
               xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
