--- a/storeadmin/templates/storeadmin/products/products.html
+++ b/storeadmin/templates/storeadmin/products/products.html
@@ -59,9 +59,10 @@
               </a>
             </td>
             <td>
-              <a href="{% url 'admin_deleteproducts' item.id %}">
+              <button  type="button" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button>
+              {% comment %} <a href="{% url 'admin_deleteproducts' item.id %}">
                 <button class="btn delete-btn btn-danger">Delete</button>
-              </a>
+              </a> {% endcomment %}
             </td>
           </tr>
           {% endfor %}
@@ -157,6 +158,31 @@
 
 
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+
+  $(".delete-btn").click(function() {
+    var someid = $(this).data("category-id");
+    if (confirm("Are you sure you want to delete this product?")) {
+        
+        $.ajax({
+            url: "/storeadmin/deleteproducts/" + someid + "/",
+            type: "DELETE",
+            beforeSend: function(xhr) {
+              xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+            },
+            success: function(response) {
+                alert(response.message);
+                location.reload();
+            },
+            error: function(xhr, status, error) {
+                alert("Error: " + error);
+            }
+        });
+    }
+});  
+</script>
 
   
 
