--- a/storeadmin/templates/storeadmin/index.html
+++ b/storeadmin/templates/storeadmin/index.html
@@ -364,44 +364,52 @@
         </ul>
       </nav> 
       {% block content %}
-      <div class="row mt-5">
-        <div class="col-md-12">
-          <div class="row mt-5">
-            <div>
-              <canvas id="myChart" width="800" height="400"></canvas>
-            </div>
-            
-            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-            
-            <script>
-              const ctx = document.getElementById('myChart');
-            
-              new Chart(ctx, {
-                type: 'bar',
-                data: {
-                  labels: [{% for item in orderdict  %} '{{item}}',  {% endfor %}],
-                  datasets: [{
-                    label: '# of Votes',
-                    data: [{% for key,value in orderdict.items  %} {{value}},  {% endfor %}],
-                    borderWidth: 1
-                  }]
-                },
-                options: {
-                  scales: {
-                    y: {
-                      beginAtZero: true
+      <div class="container-fluid">
+
+        <div class="row mt-5 ml-5">
+          Top Product with Most number Of Orders - <span class="text-success font-weight-bold">{{top_product}}</span>
+        </div>
+        <div class="row mt-5 ml-5">
+          <div class="col-md-12">
+            <div class="row mt-5">
+              <div>
+                <canvas id="myChart" width="800" height="400"></canvas>
+              </div>
+              
+              <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+              
+              <script>
+                const ctx = document.getElementById('myChart');
+              
+                new Chart(ctx, {
+                  type: 'bar',
+                  data: {
+                    labels: [{% for item in orderdict  %} '{{item}}',  {% endfor %}],
+                    datasets: [{
+                      label: '{{top_count}}  Sales for {{top_product}}',
+                      data: [{% for key,value in orderdict.items  %} {{value}},  {% endfor %}],
+                      borderWidth: 1
+                    }]
+                  },
+                  options: {
+                    scales: {
+                      y: {
+                        beginAtZero: true
+                      }
                     }
                   }
-                }
-              });
-            </script>
-            </div> 
+                });
+              </script>
+              </div> 
+            </div>
+  
           </div>
-
+          
+  
         </div>
-        
 
       </div>
+      
       
       
       
